--- a/app/assets/templates/resumes/edit.html
+++ b/app/assets/templates/resumes/edit.html
@@ -61,9 +61,9 @@
             <label for="">Skill</label>
             <input type="text" class="form-control" name="personSkill" placeholder="add skill"/>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addSkill" ng-click="addSkill()"/>
-        </div>&nbsp;&nbsp;&nbsp;
+        </div-->&nbsp;&nbsp;&nbsp;
 
 
         <div class="form-group inline">
@@ -76,9 +76,9 @@
           <label for="">Професійні навички</label>
           <input type="text" class="form-control" name="personProff" placeholder="add proff"/>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addProff" ng-click="addProff()"/>
-        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div-->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
         <div class="form-group inline border">
           <h4>Зайнятість</h4>
@@ -117,7 +117,7 @@
         <div class="form-group inline border" id="allLangs">
           <h4 for="">Language</h4>
           <select class="form-control" name="lang">
-            <option>language</option>
+            <option>add language</option>
             <option>Англійська</option>
             <option>Російська</option>
             <option>Німецька</option>
@@ -136,9 +136,9 @@
             <option>Низький</option>
           </select>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addLang" ng-click="addLang()"/>
-        </div>
+        </div-->
         <br/>
 
 
@@ -151,11 +151,11 @@
         <div class="form-group inline border" id="allCommuns">
           <h4 for="">Співбесіда</h4>
           <input type="date" class="form-control" name="communDate" placeholder="Дата"/>
-          <input type="number" class="form-control" name="communValue" placeholder="Кількість балів"/>
+          <input type="number" class="form-control" name="communValue" placeholder="add mark"/>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addCommun" ng-click="addCommun()"/>
-        </div>
+        </div-->
         <br/>
 
         <div class="form-group inline border" ng-repeat='ed in educ'>
@@ -170,16 +170,16 @@
 
         <div class="form-group inline border" id="allEduc">
           <h4 for="">Education</h4>
-          <input type="text" class="form-control" name="education" placeholder="Спеціальність"/>
+          <input type="text" class="form-control" name="education" placeholder="add education"/>
           <label for="">From</label>
           <input type="date" class="form-control" name="educationFrom" placeholder="Навчався З"/>
           <label for="">To</label>
           <input type="date" class="form-control" name="educationTo" placeholder="Навчався До"/>
           <input type="text" class="form-control" name="educationPlace" placeholder="Навчальний заклад"/>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addEduc" ng-click="addEduc()"/>
-        </div>
+        </div-->
         <br/>
 
         <div class="form-group inline border" ng-repeat='ex in exp'>
@@ -194,16 +194,16 @@
 
         <div class="form-group inline border" id="allJobs">
           <h4 for="">Experience</h4>
-          <input type="text" class="form-control" name="job" placeholder="Спеціальність"/>
+          <input type="text" class="form-control" name="job" placeholder="add experience"/>
           <label for="">From</label>
           <input type="date" class="form-control" name="jobFrom" placeholder="Працював З"/>
           <label for="">To</label>
           <input type="date" class="form-control" name="jobTo" placeholder="Працював До"/>
           <input type="text" class="form-control" name="jobPlace" placeholder="Місце роботи"/>
         </div>
-        <div class="form-group inline">
+        <!--div class="form-group inline">
           <input type="button" value="+" class="addJob" ng-click="addJob()"/>
-        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </div-->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
 
