--- a/app/assets/templates/resumes/new.html
+++ b/app/assets/templates/resumes/new.html
@@ -157,7 +157,15 @@
                 <label><input type="checkbox" name="status" value="Refused"/>Відмовився</label><br/>
                 <label><input type="checkbox" name="status" value="No"/>Не підходить</label><br/>
             </div>
-        </div>
+        </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        <!--div>
+          <form ng-submit="upload(file)"
+            <input type="file" ng-model="file"/>
+            <button type="submit"> Upload </button>
+          </form-->
+          <!--input type="file" nv-file-select uploader="newPerson.file" multiple/-->
+        <!--/div-->
 
         <br/>
         <div class="" id="comment">
